<resources>
    <string name="app_name">EstinLib</string>
    <string name="sign_in"><u>Sign in</u></string>
    <string name="email_example">example@estin.dz</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="remember_me">Remember Me</string>
    <string name="or_with">Or With</string>
    <string name="server_client_id">773362550042-71u4uqceto7l70n0ghfrivk0mr139oer.apps.googleusercontent.com</string> <!-- this needs to be client id type 3 -->
    <string name="sign_in_using_google">Sign in using Google</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="logo">logo</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="verification_email_sent">A verification has been sent to your email address. Please make sure you verify your account before you sign in</string>
    <string name="create_account">Create account</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="notification">notification</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="couldn_t_load">couldn\'t_load</string>
    <string name="placeholder">placeholder\n</string>
    <string name="reply">reply</string>
    <string name="_1cp">1CP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_attachment">icon_attachment</string>
    <string name="load_more"><u>load more</u></string>
    <string name="settings">Settings</string>
    <string name="settings_button">settings_button</string>
    <string name="_2_cp">2 CP</string>
    <string name="_1_cp">1 CP</string>
    <string name="_1_cs">1 CS</string>
    <string name="_2_cs">2 CS</string>
    <string name="semester_2">Semester 2</string>
    <string name="semester_1">Semester 1</string>
    <string name="first_year">First Year</string>
    <string name="second_year">Second Year</string>
    <string name="semester_2_ai_ds">Semester 2 - AI/DS</string>
    <string name="semester_2_cs">Semester 2 - CS</string>
    <string name="semester_1_ai_ds">Semester 1 - AI/DS</string>
    <string name="semester_1_cs">Semester 1 - CS</string>
    <string name="reply_icon">reply_icon</string>
    <string name="tag">tag</string>
    <string name="done">Done</string>
    <string name="image_from_gallery">image_from_gallery</string>
    <string name="add_comment">add comment</string>
    <string name="profile_image">profile_image</string>
    <string name="change">Change</string>
    <string name="change_im">change_im</string>
    <string name="comments">Comments</string>
    <string name="preparatory_cycle">Preparatory Cycle</string>
    <string name="superior_cycle">Superior Cycle</string>
    <string name="browse">Browse</string>
    <string name="channel">channel</string>
    <string name="add_attachment">Add attachment</string>
</resources>