<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/im_logo_estin"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_estin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cl_login"
        android:contentDescription="@string/logo" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/tv_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/white"
            android:fontFamily="@font/manrope_extra_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verification_email_sent"
            android:gravity="center"
            android:textColor="@color/colorGreen"
            android:layout_marginVertical="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_login"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:backgroundTint="@color/colorPrimaryAccent"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:cornerRadius="8dp"
        app:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/cl_login" />



</androidx.constraintlayout.widget.ConstraintLayout>