<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_profile_im"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_margin="@dimen/_8sdp"
            app:shapeAppearance="@style/circularShapeAppearance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <ImageButton
            android:id="@+id/btn_change_im"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/change_im"
            android:src="@drawable/ic_arrow_forward"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/view_pager_profile_im"
            app:layout_constraintTop_toTopOf="@id/view_pager_profile_im"
            app:layout_constraintBottom_toBottomOf="@id/view_pager_profile_im"
            app:tint="@color/white" />
        <View
            android:id="@+id/view_sep_horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/view_pager_profile_im"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/background_radius_white"
            />
        <View
            android:id="@+id/view_sep_vertical"
            android:layout_width="1dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_sep_horizontal"
            android:orientation="vertical"
            android:background="@drawable/background_radius_white"
            />
        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/change"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/view_sep_vertical"
            app:layout_constraintTop_toBottomOf="@id/view_sep_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/cancel"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/view_sep_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_sep_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>