<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20sdp">

            <ImageView
                android:id="@+id/im_logo_estin"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo_estin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                app:layout_constraintTop_toBottomOf="@id/im_logo_estin">

                <TextView
                    android:id="@+id/tv_title_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_extra_bold"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_first_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:boxBackgroundColor="@color/colorSecondaryDark"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:cursorColor="@color/colorPrimaryAccent"
                    app:hintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_login">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_first_name_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_medium"
                        android:hint="@string/first_name"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:paddingVertical="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/colorTextGray"
                        android:textSize="@dimen/_11ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_last_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    app:boxBackgroundColor="@color/colorSecondaryDark"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:cursorColor="@color/colorPrimaryAccent"
                    app:hintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/til_first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_last_name_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_medium"
                        android:hint="@string/last_name"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:paddingVertical="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/colorTextGray"
                        android:textSize="@dimen/_11ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email_sign_up"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    app:boxBackgroundColor="@color/colorSecondaryDark"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:cursorColor="@color/colorPrimaryAccent"
                    app:hintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/til_last_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_medium"
                        android:hint="@string/email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:paddingVertical="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/colorTextGray"
                        android:textSize="@dimen/_11ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_psw_sign_up"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    app:boxBackgroundColor="@color/colorSecondaryDark"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:cursorColor="@color/colorPrimaryAccent"
                    app:hintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/til_email_sign_up"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorTertiaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_psw_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_medium"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingVertical="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/colorTextGray"
                        android:textSize="@dimen/_11ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/bg_spinner"
                    android:padding="@dimen/_8sdp"
                    app:layout_constraintTop_toBottomOf="@id/til_psw_sign_up" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:backgroundTint="@color/colorPrimaryAccent"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:cornerRadius="8dp"
                app:elevation="2dp"
                app:layout_constraintTop_toBottomOf="@id/cl_login" />

            <TextView
                android:id="@+id/btn_switch_to_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:fontFamily="@font/manrope_semi_bold"
                android:padding="@dimen/_8sdp"
                android:text="@string/sign_in"
                android:textColor="@color/colorPrimaryAccent"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_submit_sign_up" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>